# ngb

./: .gitignore  README.md  manage.py  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: aec92e2a50c0_add_3_table_game_user_transaction.py
src/: main.py
src/application/: dto.py  game_service.py  transaction.py  transaction_service.py  user.py
src/config/: database.py
src/data/: enums.py  migration.py  models.py
src/presentation/: __init__.py  router.py
src/presentation/v0/: __init__.py  main.py  models.py
src/utils/: db_dependency.py
